--- a/SriTel.Microservices/Billing.Service/appsettings.json
+++ b/SriTel.Microservices/Billing.Service/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "BillingDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Billing;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;",
+    //"DefaultConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriCareDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +10,6 @@
     }
   },
   "AllowedHosts": "*"
+
 }
+
