Payment service architecture

--- a/SriTel.Microservices/Billing.Service/Billing.Service.csproj
+++ b/SriTel.Microservices/Billing.Service/Billing.Service.csproj
@@ -22,4 +22,17 @@
     <Folder Include="Billing.Infrastructure\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Billing.API\appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="Billing.API\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
