--- a/SriTel.Microservices/Payment.Service/Payment.Domain/Payment.Domain.csproj
+++ b/SriTel.Microservices/Payment.Service/Payment.Domain/Payment.Domain.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,8 +17,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
     <PackageReference Include="NUnit" Version="4.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
-    <PackageReference Include="xunit.extensibility.core" Version="2.9.3" />
-  </ItemGroup>  
+  </ItemGroup>
+  
 
   <ItemGroup>
     <Content Update="Payment.API\appsettings.Development.json">
@@ -32,11 +33,4 @@
     </Content>
   </ItemGroup>
 
-
-<ItemGroup>
-  <ProjectReference Include="..\Payment.API\Payment.API.csproj" />
-  <ProjectReference Include="..\Payment.Application\Payment.Application.csproj" />
-  <ProjectReference Include="..\Payment.Domain\Payment.Domain.csproj" />
-  <ProjectReference Include="..\Payment.Infrastructure\Payment.Infrastructure.csproj" />
-</ItemGroup>
 </Project>
