--- a/SriTel.Microservices/Payment.Service/Payment.Application/Payment.Application.csproj
+++ b/SriTel.Microservices/Payment.Service/Payment.Application/Payment.Application.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Billing.Domain\Billing.Domain.csproj" />
-    <ProjectReference Include="..\Billing.Infrastructure\Billing.Infrastructure.csproj" />
+    <ProjectReference Include="..\Payment.Domain\Payment.Domain.csproj" />
+	 <ProjectReference Include="..\Payment.Infrastructure\Payment.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
