commit api gateway swagger document.

--- a/SriTel.ApiGateway/SriTel.ApiGateway/appsettings.json
+++ b/SriTel.ApiGateway/SriTel.ApiGateway/appsettings.json
@@ -1,8 +1,11 @@
 {
   "ConnectionStrings": {
     "BillingDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Billing;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriCareDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
-  },  
+  },
+  "Services": {
+    "Billing": "https://localhost:7053",
+    "Payment": "https://localhost:7285"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,4 +14,3 @@
   },
   "AllowedHosts": "*"
 }
-
