--- a/SriTel.Microservices/Payment.Service/Payment.API/appsettings.json
+++ b/SriTel.Microservices/Payment.Service/Payment.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PaymentDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Billing;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+    "PaymentDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Payment;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
     //"DefaultConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriCareDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
