Bill to Payment pub sub created.

--- a/SriTel.Microservices/Billing.Service/Billing.API/appsettings.json
+++ b/SriTel.Microservices/Billing.Service/Billing.API/appsettings.json
@@ -1,7 +1,12 @@
 {
   "ConnectionStrings": {
-    "PaymentDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Payment;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriCareDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+    //"PaymentDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Payment;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;",
+    "BillingDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Billing;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
   },
   "Logging": {
     "LogLevel": {
