--- a/SriTel.Microservices/Payment.Service/Payment.API/appsettings.json
+++ b/SriTel.Microservices/Payment.Service/Payment.API/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
     "PaymentDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Payment;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriCareDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
   },
   "Logging": {
     "LogLevel": {
@@ -10,6 +14,4 @@
     }
   },
   "AllowedHosts": "*"
-
 }
-
