--- a/SriTel.Microservices/Customer.Service/Customer.API/appsettings.json
+++ b/SriTel.Microservices/Customer.Service/Customer.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CustomerDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Customer;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
