Fixed debug issue.

--- a/SriTel.ApiGateway/SriTel.ApiGateway/appsettings.json
+++ b/SriTel.ApiGateway/SriTel.ApiGateway/appsettings.json
@@ -3,6 +3,7 @@
     "BillingDbConnection": "Server=PIUMIDELL\\MSSQLSERVER03;Database=SriTel.Billing;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
   },
   "Services": {
+    "Customer": "https://localhost:7001",
     "Billing": "https://localhost:7053",
     "Payment": "https://localhost:7285"
   },
