--- a/SriTel.Microservices/Customer.Service/Customer.Service.csproj
+++ b/SriTel.Microservices/Customer.Service/Customer.Service.csproj
@@ -15,9 +15,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Mock.Provisioning.Service\Mock.Provisioning.Service.csproj" />
-    <ProjectReference Include="..\Billing.Service\Billing.Service.csproj" />
+  <ItemGroup>    
+    <ProjectReference Include="..\Billing.Service\Billing.Service.csproj" />    
+    <ProjectReference Include="..\External Services\Mock.Provisioning.Service\Mock.Provisioning.Service.csproj" />
   </ItemGroup>
 
 </Project>
