--- a/SriTel.Microservices/Billing.Service/Properties/launchSettings.json
+++ b/SriTel.Microservices/Billing.Service/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "Billing.Service": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7053;http://localhost:5205",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
